--- a/styles/main.scss
+++ b/styles/main.scss
@@ -83,6 +83,7 @@ html, body {
         overflow: hidden;
         background-size: Auto 500px;
       }
+
       .work-item2 {
         display: block;
         background: url(../images/test2.jpg) no-repeat center top;
@@ -108,7 +109,7 @@ html, body {
           color: $brand-color;
         }
       }
-    }
+    }//end of work-section-content
   }//end of work-content
 
   //about
@@ -175,13 +176,27 @@ html, body {
 }
 .section-title {
   text-align: center;
-  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
   span {
     font-size: 2em;
+  }
+}
+.work-item-link {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  text-decoration: none;
+  opacity: 0;
+  }
+.work-section-content {
+  a:hover {
+    opacity: 1;
+    transition: .2s ease;
   }
 }
 
