--- a/styles/all-projects.scss
+++ b/styles/all-projects.scss
@@ -49,7 +49,127 @@ $font-body:1em;
   }//end of home-landing
 }//end of main
 
+//filters
+.filter-nav {
+  width: 100%;
+  text-align: center;
+  li {
+    float: none;
+    display: inline-block;
+    padding: 5px 8px;
+    margin: 0 7px;
+  }
+  .current a, a:hover {
+    border-bottom: 1px $bg-color solid;
+    background-color: transparent !important;
 
+  }
+  .current a {
+    color: $bg-color;
+    font-weight: bold;
+  }
+}
+//end of filters
+
+//portfolio
+.portfolio-container {
+  padding: 2% 2% 0;
+  -webkit-backface-visibility: hidden;
+  text-align: center;
+}
+
+.portfolio-container:after {
+  content: '';
+  display: inline-block;
+  width: 100%;
+}
+
+.portfolio-container .mix,
+.portfolio-container .gap {
+  display: inline-block;
+  width: 49%;
+}
+
+.portfolio-container  .mix {
+  // text-align: left;
+  margin-bottom: 2%;
+  display: none;
+}
+
+.portfolio-container  .mix:before {
+  content: '';
+  display: inline-block;
+  padding-top: 10%;
+}
+
+@media all and (min-width: 420px) {
+  .portfolio-container .mix,
+  .portfolio-container .gap {
+    width: 32%;
+  }
+}
+
+@media all and (min-width: 640px) {
+  .portfolio-container .mix,
+  .portfolio-container .gap {
+    // width: 23.5%;
+    width: 22.5%;
+  }
+}
+  .project-box {
+    margin: 10px;
+    .box-caption {
+    margin-bottom: 20px;
+    height: 100px;
+    text-align: center;
+    padding: 10px;
+    }
+    .project-image1 {
+      display: block;
+      background: url(../images/test.jpg) no-repeat center top;
+      height: 300px;
+      overflow: hidden;
+      background-size: Auto 300px;
+    }
+    .project-image2 {
+      display: block;
+      background: url(../images/test2.jpg) no-repeat center top;
+      height: 300px;
+      overflow: hidden;
+      background-size: Auto 300px;
+    }
+    .project-image3 {
+      display: block;
+      background: url(../images/test3.jpg) no-repeat center top;
+      height: 300px;
+      overflow: hidden;
+      background-size: Auto 300px;
+    }
+  }
+
+  //global
+  .clear {
+    clear: both;
+    float: none;
+  }
+  .see-project{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-decoration: none;
+    opacity: 0;
+    }
+  .project-box{
+    a:hover {
+      opacity: 1;
+      transition: .2s ease;
+    }
+  }
+  .hidden {
+    display: none;
+  }
 
 
 //bootstrap
