--- a/styles/all-projects.scss
+++ b/styles/all-projects.scss
@@ -96,11 +96,11 @@ $font-body:1em;
   display: none;
 }
 
-.portfolio-container  .mix:before {
-  content: '';
-  display: inline-block;
-  padding-top: 10%;
-}
+// .portfolio-container  .mix:before {
+//   content: '';
+//   display: inline-block;
+//   padding-top: 10%;
+// }
 
 @media all and (min-width: 420px) {
   .portfolio-container .mix,
@@ -120,7 +120,7 @@ $font-body:1em;
 
 //individual image
 .project-box {
-  margin: 10px;
+  padding: 5px;
 
   // .box-caption {
   // margin-bottom: 20px;
@@ -177,7 +177,7 @@ $font-body:1em;
   }
   .text-box {
     position: absolute;
-    padding: 25px;
+    padding: 40px 50px;
     background-color: #fff;
   }
 }
