--- a/styles/main.css
+++ b/styles/main.css
@@ -172,9 +172,35 @@ html, body {
   opacity: 0;
 }
 
-.work-section-content a:hover {
+.see-project {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  text-decoration: none;
+  opacity: 0;
+  position: relative;
+}
+.see-project .color-box {
+  background-color: lightgrey;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.5;
+  position: absolute;
+}
+.see-project .text-box {
+  position: absolute;
+  padding: 40px 50px;
+  background-color: #fff;
+}
+
+.see-project:hover {
   opacity: 1;
-  transition: .2s ease;
+  transition: .3s ease;
 }
 
 .transition-width {
