--- a/styles/main.scss
+++ b/styles/main.scss
@@ -170,6 +170,15 @@ html, body {
 }//end of content-wrapper
 
 //global
+
+a {
+  text-decoration: none;
+  background-color: transparent;
+  &:hover {
+    text-decoration: none;
+    background-color: transparent;
+  }
+}
 .clear {
   clear: both;
   float: none;
