--- a/styles/project.scss
+++ b/styles/project.scss
@@ -64,8 +64,16 @@ $font-body:1em;
 
 //test
 
+
+
 .project-wrapper  {
   position: relative;
+}
+
+.scrollable {
+  position: relative;
+  height: 1000px;
+  overflow-y: scroll;
 }
 section {
   padding: 40px 0;
@@ -85,20 +93,34 @@ section:last-child {
   border-top: 1px solid #c1e1ec;
 }
 
-.affix-top {
+#Sidenav {
+  padding-top: 100px;
+}
+
+#Content {
+  padding-top: 50px;
+}
+
+
+#Sidenav li.active {
+  background-color: red;
+  color: blue;
+}
+
+#Sidenav.affix-top {
   position: relative;
 }
 
-.affix {
+#Sidenav.affix {
   top: 20px;
 }
 
-.affix,
-.affix-bottom {
+#Sidenav.affix,
+#Sidenav.affix-bottom {
     width: 213px;
 }
 
-.affix-bottom {
+#Sidenav.affix-bottom {
   position: absolute;
 }
 
