--- a/styles/project.css
+++ b/styles/project.css
@@ -1,43 +1,6 @@
-.main {
-  background-color: #1d1d21;
-  padding: none;
-}
-.main__home-landing {
-  height: 200px;
-  padding: none;
-}
-.main__home-landing__logo {
-  padding-top: 1.5em;
-  display: block;
-  margin: 0 auto;
-}
-.main__home-landing .my-navbar-wrapper {
-  border-radius: none !important;
-  width: 100%;
-  margin: 0 !important;
-  left: 0;
-  text-align: center;
+body {
   position: relative;
-  min-height: 50px;
-  border: none;
-  background-color: #1d1d21 !important;
-  border-color: none;
-}
-.main__home-landing .my-navbar-wrapper__nav {
-  list-style-type: none;
-  margin: 0 auto;
-  padding: 0;
-  text-align: center;
-  width: 100%;
-  float: none;
-}
-.main__home-landing .my-navbar-wrapper__nav--list {
-  display: inline-block !important;
-  padding: 0.75em;
-  color: #eaa075;
-  font-size: 1.33333em;
-  float: none !important;
-  position: relative;
+  line-height: 1.5;
 }
 
 .project-hero {
@@ -47,19 +10,48 @@
   height: 500px;
 }
 
-.project-wrapper {
+#nav {
+  padding-top: 100px;
+  background-color: transparent;
+}
+
+#nav.affix-top {
   position: relative;
 }
 
-.scrollable {
-  position: relative;
-  height: 1000px;
-  overflow-y: scroll;
+#nav.affix {
+  top: 20px;
+}
+
+#nav.affix,
+#nav.affix-bottom {
+  width: 213px;
+}
+
+#nav.affix-bottom {
+  position: absolute;
+}
+
+#nav li .active, #nav li a, #nav li a:hover, .side-links li.active, .side-links li a, .side-links li a:hover {
+  background-color: transparent !important;
+  color: black;
+}
+
+#nav li .active, .side-links li.active {
+  font-weight: bold;
 }
 
 section {
   padding: 40px 0;
-  border-bottom: 1px solid #c1e1ec;
+}
+
+.content-div {
+  width: 100%;
+  height: 700px;
+}
+
+section:last-child {
+  border-bottom: none;
 }
 
 #web-development,
@@ -67,76 +59,37 @@ section {
   padding-bottom: 0;
 }
 
-section:last-child {
-  border-bottom: none;
+.nav .nav {
+  display: none;
+}
+
+.nav .active .nav {
+  display: block;
+}
+
+.nav .nav a {
+  font-weight: normal;
+  font-size: .85em;
+}
+
+.nav .nav span {
+  margin: 0 5px 0 2px;
+}
+
+.nav .nav .active a,
+.nav .nav .active:hover a,
+.nav .nav .active:focus a {
+  font-weight: bold;
+  padding-left: 30px;
+  border-left: 5px solid black;
+}
+
+.nav .nav .active span,
+.nav .nav .active:hover span,
+.nav .nav .active:focus span {
+  display: none;
 }
 
 .application {
-  border-top: 1px solid #c1e1ec;
-}
-
-#Sidenav {
-  padding-top: 100px;
-}
-
-#Content {
-  padding-top: 50px;
-}
-
-#Sidenav li.active {
-  background-color: red;
-  color: blue;
-}
-
-#Sidenav.affix-top {
-  position: relative;
-}
-
-#Sidenav.affix {
-  top: 20px;
-}
-
-#Sidenav.affix,
-#Sidenav.affix-bottom {
-  width: 213px;
-}
-
-#Sidenav.affix-bottom {
-  position: absolute;
-}
-
-footer {
-  border-top: 1px solid #c1e1ec;
-  height: 50px;
-}
-
-footer p {
-  line-height: 50px;
-  margin-bottom: 0;
-}
-
-@media (min-width: 1200px) {
-  .affix,
-  .affix-bottom {
-    width: 263px;
-  }
-}
-.my-navbar-wrapper.affix {
-  top: 0;
-  width: 100%;
-  position: fixed !important;
-  z-index: 1000;
-}
-
-.my-navbar-wrapper.affix-top {
-  top: 0;
-  width: 100%;
-}
-
-.my-navbar-wrapper.affix + .container-fluid {
-  padding-top: 70px;
-}
-
-.navbar {
-  border-radius: 0 !important;
+  padding: 150px 0;
 }
