--- a/styles/global.scss
+++ b/styles/global.scss
@@ -4,49 +4,39 @@ $brand-color: #eaa075;
 $font-head: 2em;
 $font-body:1em;
 
-.main {
-  background-color: $bg-color;
-  padding: none;
-  //home-landing
-  &__home-landing {
-    height: 200px;
-    padding: none;
-    &__logo {
-      padding-top:$gutter;
-      display: block;
-      margin: 0 auto;
-    }
-    .my-navbar-wrapper {
-      border-radius: none !important;
-      width: 100%;
-      margin: 0 !important;
-      left: 0;
-      text-align: center;
+.my-navbar-wrapper {
+  border-radius: none !important;
+  width: 100%;
+  margin: 0 !important;
+  left: 0;
+  text-align: center;
+  position: relative;
+  min-height: 50px;
+  border: none;
+  background-color: $bg-color !important;
+  border-color: none;
+  @media only screen and (max-width: 500px) {
+    width: 420px;
+    font-size: 0.65em;
+    // padding-top: 15px;
+  }
+  &__nav {
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
+    width: 100%;
+    float: none;
+    &--list {
+      display: inline-block !important;
+      padding: $gutter/2;
+      color: $brand-color;
+      font-size: $font-head/1.5;
+      float: none !important;
       position: relative;
-      min-height: 50px;
-      border: none;
-      background-color: $bg-color !important;
-      border-color: none;
-      &__nav {
-        list-style-type: none;
-        margin: 0 auto;
-        padding: 0;
-        text-align: center;
-        width: 100%;
-        float: none;
-        &--list {
-          display: inline-block !important;
-          padding: $gutter/2;
-          color: $brand-color;
-          font-size: $font-head/1.5;
-          float: none !important;
-          position: relative;
-        }
-      }
     }
-
-  }//end of home-landing
-}//end of main
+  }
+}
 
 //sticky nav affix bootstrap
 .my-navbar-wrapper.affix {
@@ -72,8 +62,9 @@ $font-body:1em;
 
 //footer
 footer {
-  border-top: 1px solid #c1e1ec;
   height: 50px;
+  border-top: none !important;
+  background-color: $bg-color;
 }
 footer p {
   line-height: 50px;
