--- a/styles/main.css
+++ b/styles/main.css
@@ -3,11 +3,22 @@ html, body {
 }
 
 .main {
+  background-color: #1d1d21;
   padding: none;
 }
+@media only screen and (max-width: 500px) {
+  .main {
+    height: 300px;
+  }
+}
 .main__home-landing {
-  height: 642px;
   padding: none;
+}
+@media only screen and (max-width: 500px) {
+  .main__home-landing {
+    height: 150px;
+    padding: 0;
+  }
 }
 .main__home-landing__subtitle {
   padding-top: 0.75em;
@@ -15,38 +26,20 @@ html, body {
   color: #eaa075;
   text-align: center;
 }
+@media only screen and (max-width: 500px) {
+  .main__home-landing__subtitle {
+    font-size: 1em;
+  }
+}
 .main__home-landing__logo {
   padding-top: 1.5em;
   display: block;
   margin: 0 auto;
 }
-.main__home-landing .my-navbar-wrapper {
-  border-radius: none !important;
-  width: 100%;
-  margin: 0 !important;
-  left: 0;
-  text-align: center;
-  position: relative;
-  min-height: 50px;
-  border: none;
-  background-color: #1d1d21 !important;
-  border-color: none;
-}
-.main__home-landing .my-navbar-wrapper__nav {
-  list-style-type: none;
-  margin: 0 auto;
-  padding: 0;
-  text-align: center;
-  width: 100%;
-  float: none;
-}
-.main__home-landing .my-navbar-wrapper__nav--list {
-  display: inline-block !important;
-  padding: 0.75em;
-  color: #eaa075;
-  font-size: 1.33333em;
-  float: none !important;
-  position: relative;
+@media only screen and (max-width: 500px) {
+  .main__home-landing__logo {
+    width: 150px;
+  }
 }
 
 .content-wrapper {
@@ -62,10 +55,22 @@ html, body {
   width: 50%;
   float: left;
 }
+@media only screen and (max-width: 500px) {
+  .content-wrapper .work-content .work-section-title {
+    display: none;
+  }
+}
 .content-wrapper .work-content .work-section-content {
   height: 2100px;
   width: 50%;
   float: right;
+}
+@media only screen and (max-width: 500px) {
+  .content-wrapper .work-content .work-section-content {
+    height: 300px;
+    width: 100%;
+    float: none;
+  }
 }
 .content-wrapper .work-content .work-section-content .work-item1 {
   display: block;
@@ -74,6 +79,12 @@ html, body {
   overflow: hidden;
   background-size: Auto 500px;
 }
+@media only screen and (max-width: 500px) {
+  .content-wrapper .work-content .work-section-content .work-item1 {
+    background: url(../images/test.jpg) no-repeat center;
+    height: 300px;
+  }
+}
 .content-wrapper .work-content .work-section-content .work-item2 {
   display: block;
   background: url(../images/test2.jpg) no-repeat center top;
@@ -81,12 +92,24 @@ html, body {
   overflow: hidden;
   background-size: Auto 500px;
 }
+@media only screen and (max-width: 500px) {
+  .content-wrapper .work-content .work-section-content .work-item2 {
+    background: url(../images/test2.jpg) no-repeat center;
+    height: 300px;
+  }
+}
 .content-wrapper .work-content .work-section-content .work-item3 {
   display: block;
   background: url(../images/test3.jpg) no-repeat center top;
   height: 500px;
   overflow: hidden;
   background-size: Auto 500px;
+}
+@media only screen and (max-width: 500px) {
+  .content-wrapper .work-content .work-section-content .work-item3 {
+    background: url(../images/test3.jpg) no-repeat center;
+    height: 300px;
+  }
 }
 .content-wrapper .work-content .work-section-content .see-all-work {
   text-align: center;
@@ -107,14 +130,31 @@ html, body {
   width: 50%;
   float: left;
 }
+@media only screen and (max-width: 500px) {
+  .content-wrapper .about-content .about-section-title {
+    display: none;
+  }
+}
 .content-wrapper .about-content .about-section-content {
   height: 1200px;
   background-color: #fff;
   width: 50%;
   float: right;
 }
+@media only screen and (max-width: 500px) {
+  .content-wrapper .about-content .about-section-content {
+    height: auto;
+    width: 100%;
+    float: none;
+  }
+}
 .content-wrapper .about-content .about-section-content .about-text-wrapper {
   padding: 150px 80px;
+}
+@media only screen and (max-width: 500px) {
+  .content-wrapper .about-content .about-section-content .about-text-wrapper {
+    padding: 1.5em;
+  }
 }
 .content-wrapper .contact-content {
   position: relative;
@@ -127,23 +167,55 @@ html, body {
   width: 50%;
   float: left;
 }
+@media only screen and (max-width: 500px) {
+  .content-wrapper .contact-content .contact-section-title {
+    display: none;
+  }
+}
 .content-wrapper .contact-content .contact-section-content {
   height: 650px;
   margin-left: 110px;
   width: 50%;
   float: right;
 }
+@media only screen and (max-width: 500px) {
+  .content-wrapper .contact-content .contact-section-content {
+    height: auto;
+    width: 100%;
+    float: none;
+    margin-left: 0;
+  }
+}
 .content-wrapper .contact-content .contact-section-content .contact-text-wrapper {
   padding: 150px 80px;
   color: #fff;
+}
+@media only screen and (max-width: 500px) {
+  .content-wrapper .contact-content .contact-section-content .contact-text-wrapper {
+    padding: 1.5em;
+  }
 }
 .content-wrapper .ty-section {
   height: 650px;
   background-color: #eaa075;
   text-align: center;
 }
+@media only screen and (max-width: 500px) {
+  .content-wrapper .ty-section {
+    height: 350px;
+  }
+}
 .content-wrapper .ty-section h1 {
   font-size: 2em;
+}
+
+a {
+  text-decoration: none;
+  background-color: transparent;
+}
+a:hover {
+  text-decoration: none;
+  background-color: transparent;
 }
 
 .clear {
@@ -205,24 +277,4 @@ html, body {
 
 .transition-width {
   transition: all 2s ease-out;
-}
-
-.my-navbar-wrapper.affix {
-  top: 0;
-  width: 100%;
-  position: fixed !important;
-  z-index: 1000;
-}
-
-.my-navbar-wrapper.affix-top {
-  top: 0;
-  width: 100%;
-}
-
-.my-navbar-wrapper.affix + .container-fluid {
-  padding-top: 70px;
-}
-
-.navbar {
-  border-radius: 0 !important;
 }
