--- a/styles/project.css
+++ b/styles/project.css
@@ -3,11 +3,43 @@ body {
   line-height: 1.5;
 }
 
+.main {
+  background-color: #1d1d21;
+  padding: none;
+}
+.main__home-landing {
+  height: 200px;
+  padding: 10px 0;
+  margin: auto;
+}
+.main__home-landing__logo {
+  padding-top: 1.5em;
+  display: block;
+  margin: 0 auto;
+  width: 150px;
+}
+@media only screen and (max-width: 500px) {
+  .main__home-landing__logo {
+    width: 100px;
+  }
+}
+
 .project-hero {
   background: url(../images/project1-hero.jpg) no-repeat center top;
   background-size: cover;
   width: 100%;
   height: 500px;
+}
+@media only screen and (max-width: 500px) {
+  .project-hero {
+    height: 350px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .scrollspy {
+    display: none;
+  }
 }
 
 #nav {
@@ -41,13 +73,24 @@ body {
   font-weight: bold;
 }
 
+@media only screen and (max-width: 500px) {
+  .project-content {
+    padding: 0 !important;
+  }
+}
+
 section {
   padding: 40px 0;
+}
+@media only screen and (max-width: 500px) {
+  section {
+    padding: 0 !important;
+  }
 }
 
 .content-div {
   width: 100%;
-  height: 700px;
+  height: auto;
 }
 
 section:last-child {
