--- a/styles/project.scss
+++ b/styles/project.scss
@@ -10,15 +10,44 @@ body {
   line-height: 1.5;
 }
 
+.main {
+  background-color: $bg-color;
+  padding: none;
+  //home-landing
+  &__home-landing {
+    height: 200px;
+    padding: 10px 0;
+    margin: auto;
+    &__logo {
+      padding-top:$gutter;
+      display: block;
+      margin: 0 auto;
+      width: 150px;
+      @media only screen and (max-width: 500px) {
+        width: 100px;
+      }
+    }
+
+  }//end of home-landing
+}//end of main
+
 //project-hero
 .project-hero {
   background: url(../images/project1-hero.jpg) no-repeat center top;
   background-size: cover;
   width: 100%;
   height: 500px;
+  @media only screen and (max-width: 500px) {
+    height: 350px;
+  }
 }
 
 //table of contents
+.scrollspy {
+  @media only screen and (max-width: 500px) {
+    display: none;
+  }
+}
 #nav {
   padding-top: 100px;
   background-color: transparent;
@@ -46,12 +75,23 @@ body {
 }
 
 //project contents
+.project-content {
+  @media only screen and (max-width: 500px) {
+    padding: 0 !important;
+  }
+}
 section {
   padding: 40px 0;
+  @media only screen and (max-width: 500px) {
+    padding: 0 !important;
+  }
 }
 .content-div {
   width: 100%;
-  height: 700px;
+  height: auto;
+  @media only screen and (max-width: 500px) {
+
+  }
 }
 section:last-child {
   border-bottom: none;
