--- a/styles/global.css
+++ b/styles/global.css
@@ -1,167 +1,3 @@
-@charset "UTF-8";
-/**
- * Housekeeping. Nothing to see here...
- */
-html {
-  font-size: 12px;
-  line-height: 1.5;
-  font-family: sans-serif;
-}
-
-a {
-  text-decoration: none;
-}
-a:hover {
-  text-decoration: underline;
-}
-
-/**
- * Very simple, pared-back, mobile-first, responsive nav.
- */
-/**
- * An element (`nav`) in which to house our dropdown.
- *
- * 1. Make sure we can’t actually see the absolutely positioned dropdown.
- */
-.responsive-nav {
-  position: relative;
-  z-index: 1;
-  width: 44px;
-  height: 44px;
-  color: #fff;
-  background-color: #f43059;
-  overflow: hidden;
-  /* [1] */
-  border-radius: 3px;
-  cursor: pointer;
-  /**
-   * Make the wrapper element lie horizontally on wider viewports.
-   * Nasty RWD makes us undo a lot of stuff :(
-   */
-  /**
-   * Place a hamburger (don’t hate the player, hate the game...) icon
-   * over the top of our nav element.
-   */
-  /**
-   * When we add this class, we simply allow the absolutely positioned
-   * dropdown to be seen.
-   */
-}
-@media screen and (min-width: 720px) {
-  .responsive-nav {
-    position: static;
-    width: auto;
-    height: auto;
-    background: none;
-    color: #f43059;
-  }
-}
-.responsive-nav:after {
-  content: "☰";
-  font-size: 16px;
-  width: 1em;
-  line-height: 1;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -8px;
-  margin-left: -8px;
-  /**
-   * Remove the hamburger on wider viewports.
-   */
-}
-@media screen and (min-width: 720px) {
-  .responsive-nav:after {
-    content: normal;
-    content: none;
-  }
-}
-.responsive-nav.is-open {
-  overflow: visible;
-  /**
-   * Change the hamburger to a cross when the nav is open.
-   */
-}
-.responsive-nav.is-open:after {
-  content: "✕";
-  /**
-   * Remove the cross on wider viewports.
-   * We have to repeat this chunk because of limitations with Sass.
-   */
-}
-@media screen and (min-width: 720px) {
-  .responsive-nav.is-open:after {
-    content: normal;
-    content: none;
-  }
-}
-
-/**
- * The absolutely positioned dropdown of links.
- *
- * 1. Position the dropdown underneath the trigger.
- */
-.responsive-nav__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  padding-top: 44px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #f43059;
-  width: 250px;
-  border-radius: 3px;
-  z-index: -1;
-  /* [1] */
-  /**
-   * Un-position the dropdown on larger viewports.
-   * More nasty RWD undoing stuff :(
-   */
-}
-@media screen and (min-width: 720px) {
-  .responsive-nav__list {
-    padding-top: 0;
-    position: static;
-    width: auto;
-    display: block;
-    background: none;
-    text-align: left;
-  }
-}
-
-.responsive-nav__item {
-  border-top: 1px solid #f76080;
-}
-@media screen and (min-width: 720px) {
-  .responsive-nav__item {
-    display: inline-block;
-    border-top: none;
-  }
-}
-
-/**
- * 1. Ensure that the link text lines up with the hamburger.
- * 2. Ensure that the link text is the same height as the trigger.
- */
-.responsive-nav__link {
-  color: #fff;
-  display: block;
-  white-space: nowrap;
-  padding-right: 14px;
-  /* [1] */
-  padding-left: 14px;
-  /* [1] */
-  line-height: 44px;
-  /* [2] */
-}
-@media screen and (min-width: 720px) {
-  .responsive-nav__link {
-    color: #f43059;
-  }
-}
-
 .my-navbar-wrapper {
   border-radius: none !important;
   width: 100%;
@@ -195,6 +31,83 @@ a:hover {
   font-size: 1.33333em;
   float: none !important;
   position: relative;
+}
+.my-navbar-wrapper .my-logo img {
+  float: left;
+  width: 30px;
+  visibility: collapse;
+}
+@media only screen and (max-width: 768px) {
+  .my-navbar-wrapper .my-logo img {
+    visibility: visible;
+  }
+}
+.my-navbar-wrapper .icon-bar {
+  color: white;
+}
+.my-navbar-wrapper #navIcon {
+  position: relative;
+  margin: 10px;
+  padding: 5px 0;
+  width: 35px;
+  height: 20px;
+  cursor: pointer;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: all .5s ease-in-out;
+  -moz-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+}
+.my-navbar-wrapper #navIcon span {
+  display: block;
+  position: absolute;
+  left: 0;
+  margin-top: 5px;
+  width: 100%;
+  height: 2px;
+  background: #eaa075;
+  border-radius: 9px;
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: all .25s ease-in-out;
+  -moz-transition: all .25s ease-in-out;
+  -o-transition: all .25s ease-in-out;
+  transition: all .25s ease-in-out;
+}
+.my-navbar-wrapper #navIcon span:nth-child(1) {
+  top: 0px;
+}
+.my-navbar-wrapper #navIcon span:nth-child(2), .my-navbar-wrapper #navIcon span:nth-child(3) {
+  top: 9px;
+}
+.my-navbar-wrapper #navIcon span:nth-child(4) {
+  top: 18px;
+}
+.my-navbar-wrapper #navIcon.open span:nth-child(1) {
+  left: 50%;
+  width: 0%;
+}
+.my-navbar-wrapper #navIcon.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.my-navbar-wrapper #navIcon.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+.my-navbar-wrapper #navIcon.open span:nth-child(4) {
+  left: 50%;
+  width: 0%;
 }
 
 .my-navbar-wrapper.affix {
