--- a/styles/global.scss
+++ b/styles/global.scss
@@ -3,178 +3,7 @@ $gutter: 1.5em;
 $brand-color: #eaa075;
 $font-head: 2em;
 $font-body:1em;
-/**
- * Housekeeping. Nothing to see here...
- */
-html {
-    font-size: 12px;
-    line-height: 1.5;
-    font-family: sans-serif;
-}
 
-a {
-    text-decoration: none;
-
-    &:hover {
-        text-decoration: underline;
-    }
-
-}
-
-
-
-
-/**
- * Very simple, pared-back, mobile-first, responsive nav.
- */
-$responsive-nav-hit-area:   44px;
-$responsive-nav-icon-size:  16px;
-$responsive-nav-color:      #fff;
-$responsive-nav-background: #f43059;
-$responsive-nav-borders:    lighten($responsive-nav-background, 10%);
-
-/**
- * An element (`nav`) in which to house our dropdown.
- *
- * 1. Make sure we can’t actually see the absolutely positioned dropdown.
- */
-.responsive-nav {
-    position: relative;
-    z-index: 1;
-    width:  $responsive-nav-hit-area;
-    height: $responsive-nav-hit-area;
-    color: $responsive-nav-color;
-    background-color: $responsive-nav-background;
-    overflow: hidden; /* [1] */
-    border-radius: 3px;
-    cursor: pointer;
-
-    /**
-     * Make the wrapper element lie horizontally on wider viewports.
-     * Nasty RWD makes us undo a lot of stuff :(
-     */
-    @media screen and (min-width: 720px) {
-        position: static;
-        width:  auto;
-        height: auto;
-        background: none;
-        color: $responsive-nav-background;
-    }
-
-    /**
-     * Place a hamburger (don’t hate the player, hate the game...) icon
-     * over the top of our nav element.
-     */
-    &:after {
-        content: "☰";
-        font-size: $responsive-nav-icon-size;
-        width: 1em;
-        line-height: 1;
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-top:  -($responsive-nav-icon-size / 2);
-        margin-left: -($responsive-nav-icon-size / 2);
-
-        /**
-         * Remove the hamburger on wider viewports.
-         */
-        @media screen and (min-width: 720px) {
-            content: normal;
-            content: none;
-        }
-
-    }
-
-/**
- * When we add this class, we simply allow the absolutely positioned
- * dropdown to be seen.
- */
-    &.is-open {
-        overflow: visible;
-
-        /**
-         * Change the hamburger to a cross when the nav is open.
-         */
-        &:after {
-            content: "✕";
-
-            /**
-             * Remove the cross on wider viewports.
-             * We have to repeat this chunk because of limitations with Sass.
-             */
-            @media screen and (min-width: 720px) {
-                content: normal;
-                content: none;
-            }
-
-        }
-
-    }
-
-}
-
-    /**
-     * The absolutely positioned dropdown of links.
-     *
-     * 1. Position the dropdown underneath the trigger.
-     */
-    .responsive-nav__list {
-        list-style: none;
-        margin:  0;
-        padding: 0;
-        padding-top: $responsive-nav-hit-area;
-        position: absolute;
-        top:   0;
-        left:  0;
-        background-color: $responsive-nav-background;
-        width: 250px;
-        border-radius: 3px;
-        z-index: -1; /* [1] */
-
-            /**
-             * Un-position the dropdown on larger viewports.
-             * More nasty RWD undoing stuff :(
-             */
-            @media screen and (min-width: 720px) {
-                padding-top: 0;
-                position: static;
-                width: auto;
-                display: block;
-                background: none;
-                text-align: left;
-            }
-
-    }
-
-        .responsive-nav__item {
-            border-top: 1px solid $responsive-nav-borders;
-
-                @media screen and (min-width: 720px) {
-                    display: inline-block;
-                    border-top: none;
-                }
-
-        }
-
-            /**
-             * 1. Ensure that the link text lines up with the hamburger.
-             * 2. Ensure that the link text is the same height as the trigger.
-             */
-            .responsive-nav__link {
-                color: $responsive-nav-color;
-                display: block;
-                white-space: nowrap;
-                padding-right: ($responsive-nav-hit-area - $responsive-nav-icon-size) / 2; /* [1] */
-                padding-left:  ($responsive-nav-hit-area - $responsive-nav-icon-size) / 2; /* [1] */
-                line-height: $responsive-nav-hit-area; /* [2] */
-
-                @media screen and (min-width: 720px) {
-                    color: $responsive-nav-background;
-                }
-
-            }
 
 .my-navbar-wrapper {
   border-radius: none !important;
@@ -208,6 +37,101 @@ $responsive-nav-borders:    lighten($responsive-nav-background, 10%);
       position: relative;
     }
   }
+  .my-logo img {
+    float: left;
+    width: 30px;
+    visibility: collapse;
+    @media only screen and (max-width: 768px) {
+    visibility: visible;
+    }
+  }
+  .icon-bar {
+    color: white;
+  }
+
+#navIcon {
+  position: relative;
+  margin: 10px;
+  padding: 5px 0;
+  width: 35px;
+  height: 20px;
+  cursor: pointer;
+
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+
+  -webkit-transition: all .5s ease-in-out;
+  -moz-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+
+  span {
+    display: block;
+    position: absolute;
+    left: 0;
+    margin-top: 5px;
+    width: 100%;
+    height: 2px;
+    // background-color: $bg-color;
+    // color: $brand-color;
+    background: $brand-color;
+    border-radius: 9px;
+    opacity: 1;
+
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+
+    -webkit-transition: all .25s ease-in-out;
+    -moz-transition: all .25s ease-in-out;
+    -o-transition: all .25s ease-in-out;
+    transition: all .25s ease-in-out;
+
+    &:nth-child(1) {
+      top: 0px;
+    }
+
+    &:nth-child(2),
+    &:nth-child(3) {
+      top: 9px;
+    }
+
+    &:nth-child(4) {
+      top: 18px;
+    }
+  }
+
+  &.open {
+    span {
+      &:nth-child(1) {
+        left: 50%;
+        width: 0%;
+      }
+
+      &:nth-child(2) {
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        transform: rotate(45deg);
+      }
+
+      &:nth-child(3) {
+        -webkit-transform: rotate(-45deg);
+        -moz-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+      }
+
+      &:nth-child(4) {
+        left: 50%;
+        width: 0%;
+      }
+    }
+  }
+}
 }
 
 //sticky nav affix bootstrap
