--- a/styles/global.scss
+++ b/styles/global.scss
@@ -5,6 +5,12 @@ $font-head: 2em;
 $font-body:1em;
 
 
+.main__home-landing__subtitle, .main__home-landing__logo {
+  @media only screen and (max-width: 500px) {
+  display: none;
+  }
+}
+
 .my-navbar-wrapper {
   border-radius: none !important;
   width: 100%;
@@ -35,6 +41,10 @@ $font-body:1em;
       font-size: $font-head/1.5;
       float: none !important;
       position: relative;
+      @media only screen and (max-width: 500px) {
+        display: block !important;
+        font-size: $font-head;
+      }
     }
   }
   .my-logo img {
@@ -145,6 +155,7 @@ $font-body:1em;
 .my-navbar-wrapper.affix-top {
     top: 0;
     width: 100%;
+    z-index: 999999;
 }
 
 .my-navbar-wrapper.affix + .container-fluid {
