--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@ html, body {
 }
 @media only screen and (max-width: 500px) {
   .main {
-    height: 300px;
+    height: 50px;
   }
 }
 .main__home-landing {
@@ -28,7 +28,7 @@ html, body {
 }
 @media only screen and (max-width: 500px) {
   .main__home-landing__subtitle {
-    font-size: 1em;
+    display: none;
   }
 }
 .main__home-landing__logo {
@@ -38,7 +38,7 @@ html, body {
 }
 @media only screen and (max-width: 500px) {
   .main__home-landing__logo {
-    width: 150px;
+    display: none;
   }
 }
 
