--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,8 +12,9 @@ html, body {
   background-color: $bg-color;
   padding: none;
   @media only screen and (max-width: 500px) {
-    height: 300px
+    height: 50px
   }
+
   //home-landing
   &__home-landing {
     padding: none;
@@ -27,7 +28,7 @@ html, body {
       color: $brand-color;
       text-align: center;
       @media only screen and (max-width: 500px) {
-        font-size: 1em;
+        display: none;
       }
     }
     &__logo {
@@ -35,12 +36,34 @@ html, body {
       display: block;
       margin: 0 auto;
       @media only screen and (max-width: 500px) {
-        width: 150px;
+        display: none;
       }
     }
 
   }//end of home-landing
 }//end of main
+
+//mobile-landing
+// .mobile-landing {
+//     display: none;
+//     @media only screen and (max-width: 500px) {
+//       display:block;
+//       height: 200px;
+//       background-color: $brand-color;
+//       padding: 0;
+//       width: 100%;
+//     }
+//     .mobile-logo {
+//       width: 100px;
+//       padding: 30px 5px 10px 5px;
+//       display: block;
+//       margin: 0 auto;
+//     }
+//     h4 {
+//       text-align: center;
+//       padding-bottom: 10px;
+//     }
+// }
 
 .content-wrapper {
   position: relative;
