--- a/styles/project.scss
+++ b/styles/project.scss
@@ -55,6 +55,10 @@ body {
   }
 }
 
+.content-area {
+  margin-left: 5em;
+}
+
 //table of contents
 .scrollspy {
   @media only screen and (max-width: 500px) {
@@ -94,7 +98,7 @@ body {
   }
 }
 section {
-  padding: 40px 0;
+  // padding: 40px 0;
   @media only screen and (max-width: 500px) {
     padding: 0 !important;
   }
@@ -102,6 +106,9 @@ section {
 .content-div {
   width: 100%;
   height: auto;
+  img {
+    width: 100%;
+  }
   @media only screen and (max-width: 500px) {
 
   }
